--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -29,7 +29,7 @@
   /* Pseudo element - contain the torn paper image */
   &:after {
     content: "";
-    background: #fff url("images/paper-tear.png") repeat-x 0 0;
+    background: #fff image-url("images/paper-tear.png") repeat-x 0 0;
     @include img-2x("images/paper-tear@2x.png", 10px, 6px);
     position: absolute;
     bottom: -5px;
