--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -53,8 +53,8 @@
   <h3 class="hide-visually">The fine print</h3>
   <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt toggle-content js-toggle-content js-hide-show">
     <!-- [BACK END] Each new line (ENTER) entered in the HTML `textarea` to generate a `p` element then can remove the static `p`s below -->
-    <% @deal.terms_and_conditions.each do |line| %>
-      <p><%= line %></p>
+    <% @deal.terms_and_conditions.each do |paragraph| %>
+      <p><%= paragraph %></p>
     <% end %>
   </div>
   <!-- //Fine print -->
