update for non JS users to content isn't hidden

--- a/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
+++ b/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
@@ -13,6 +13,9 @@
 .toggle-content {
 	display: none;
 	outline: none;
+
+	/* Non JS users */
+	.no-js & {display: block !important;}
 }
 
 /* --Toggle button container-- */
