WSF-4924 Show 'also available at'

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -109,12 +109,12 @@
 <div class="island">
   <h3 class="detail-view__hdr-sub hn">Also available at</h3>
   <ul>
-    <%- @product.centres.each do |centre| -%>
+    <%- @centres.each do |centre| -%>
       <li>
         <%= link_to centre_product_path(centre_id: centre.code, retailer_code: @product.retailer_code, sku: @product.sku),
           class: "centres-list" do %>
           <span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span>
-          <%= centre.name %>
+          <%= centre.short_name %>
           <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
         <%- end -%>
       </li>
