adds retailer_code to filter the store in the map

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
     <!-- Store location -->
     <div class="map-micello map-micello--static preserve-aspect-ratio detail-view__divider">
       <div class="preserve-aspect-ratio__inner">
-        <%= render partial: 'shared/map', locals: {store_id: 490} %>
+        <%= render partial: 'shared/map', locals: {store_id: @stores.first.id} %>
       </div>
     </div>
     <!-- //Store location -->
