--- a/app/assets/stylesheets/partials/modules/widgets/_adaptive-google-map.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_adaptive-google-map.scss
@@ -16,7 +16,7 @@
 		http://codepen.io/bradfrost/full/tLxAs
 */
 
-.map {
+.map-google {
 	position: relative;
 	/* Have this so the preloader is contained within it's parent */
 	min-height: 100px;
@@ -30,7 +30,7 @@
 }
 
 	/* Static */
-	.map__static {
+	.map-google__static {
 		@include to-rem(margin-bottom, $spacing-half);
 		background: url("http://maps.google.com/maps/api/staticmap?center=-33.867487,151.20699&zoom=15&markers=-33.867487,151.20699&size=640x400&sensor=false") no-repeat 50% 50%;
 		/* Retina */
@@ -59,7 +59,7 @@
 	}
 
 	/* Dynamic */
-	.map__dynamic {
+	.map-google__dynamic {
 
 		/* Print */
 		@media print {
@@ -72,5 +72,5 @@
 
 	/* Map link - hide at this breakpoint only when JS is on */
 	@include respond-min($non-palm) {
-		.js .map__link {display: none;}
+		.js .map-google__link {display: none;}
 	}
