--- a/app/assets/stylesheets/partials/modules/widgets/_map-ie.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-ie.scss
@@ -88,12 +88,15 @@
     overflow: auto;
 
     img {
+      display: block;
       position: relative;
+      top: 0;
+      left: 0;
+      max-width: 300%;
     }
   }
 
   .zoom {
-    display: none;
     position: absolute;
     right: 20px;
     top: 20px;
@@ -120,8 +123,7 @@
   .level-select {
     position: absolute;
     right: 20px;
-    // top: 100px;
-    top: 20px;
+    top: 100px;
     background-color: white;
     border: 1px solid #333;
     color: #333;
