--- a/app/assets/stylesheets/partials/modules/widgets/_map-ie.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-ie.scss
@@ -85,7 +85,7 @@
   .container {
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 
     img {
       display: block;
