--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,4 +1,5 @@
-<a class="tile tile--products" href="<%= result[:_links][:self][:href] %>">
+<%= link_to centre_product_path(centre_id: params[:centre_id] || params[:id], retailer_code: result[:retailer_code], sku: result[:sku]), 
+  class: "tile tile--products" do %>
   <article class="box" role="article">
 
     <span class="tile__image">
@@ -9,13 +10,13 @@
     <div class="tile__meta">
       <span class="tile__meta__icon">
         <span class="icon icon--products" aria-hidden="true"></span>
-        <span class="hide-visually">Event</span>
+        <span class="hide-visually">Product</span>
       </span>
       <div class="tile__meta__inner">
         <h3 class="tile__meta__hdr"><%= result[:name] %></h3>
-        <p class="tile__meta__desc"><%= result[:description] %></p>
+        <%#<p class="tile__meta__desc"><%= raw result[:description] %#></p>%>
       </div>
     </div>
 
   </article>
-</a>
+<% end %>
