--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -12,7 +12,7 @@
       <% end %>
     <% end %>
   </ul>
-  <div class="map">
+  <div class="map-micello">
     <%= render partial: 'shared/map', locals: {store_id: nil} %>
   </div>
 </div>
