--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -1,11 +1,11 @@
 <!--[if lte IE 8]>
-<div id="map">Upgrade your browser, limited support for older browsers coming soon.</div>
+	<div id="map">Upgrade your browser, limited support for older browsers coming soon.</div>
 <![endif]-->
-<!--[if gt IE 8]><--!>
-<div id="map" class="map">Loading map...</div>
-<%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
-<%= javascript_include_tag 'map' %>
-<%= javascript_tag do %>
-  new Map({select: <%= store_id || 'null' %>})
-<% end %>
-<!--><![endif]-->
+<!--[if gt IE 8]><!-->
+	<div id="map" class="map-micello__api">Loading map...</div>
+	<%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
+	<%= javascript_include_tag 'map' %>
+	<%= javascript_tag do %>
+	  new Map({select: <%= store_id || 'null' %>})
+	<% end %>
+<!--<![endif]-->
