removing some rules to temporarily fix 'Stores'

--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -3,8 +3,8 @@
    ====================================================================================== */
 
 .main {
-	position: relative;
-	z-index: 1;
+	//position: relative;
+	//z-index: 1;
 
 	/* Turn off `.container` rules for detail views */
 	.page-detail-view & {width: auto;}
