--- a/app/assets/stylesheets/partials/modules/_pin-board.scss
+++ b/app/assets/stylesheets/partials/modules/_pin-board.scss
@@ -16,5 +16,6 @@
 	/* Increase top padding at this breakpoint */
 	@include respond-min($non-palm) {
 		@include to-rem(margin-top, $spacing-base);
+		@include to-rem(margin-bottom, $spacing-half);
 	}
 }
