--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,6 +148,7 @@ Global stylesheet
 @import "partials/buttons/menu-toggle";
 @import "partials/buttons/close";
 @import "partials/buttons/faux-link";
+@import "partials/buttons/expand-collapse";
 
 /* Helpers */
 @import "partials/helpers/hide";
